@@ -676,6 +676,7 @@ ROW   |23144 |0   |                 |                                           
 ROW   |23145 |0   |                 |                                                           |10081 |Processor load (5 min average)                                   |system.cpu.load[percpu,avg5]                                                   |60   |7      |365   |0     |0         |             |        |0         |0    |                   |0                   |                     |                     |1      |          |NULL      |NULL      |          |                                                                                    |                |0        |0       |           |           |         |          |0    |NULL       |    |                                                                                                                                                                                                                                                                                                                                                                                                                                          |0             |30      |0                  |0                  |                  |0       |
 ROW   |23147 |0   |                 |                                                           |10081 |Free swap space                                                  |system.swap.size[,free]                                                        |60   |7      |365   |0     |3         |             |B       |0         |0    |                   |0                   |                     |                     |1      |          |NULL      |NULL      |          |                                                                                    |                |0        |0       |           |           |         |          |0    |NULL       |    |                                                                                                                                                                                                                                                                                                                                                                                                                                          |0             |30      |0                  |0                  |                  |0       |
 ROW   |23148 |0   |                 |                                                           |10081 |Total swap space                                                 |system.swap.size[,total]                                                       |3600 |7      |365   |0     |3         |             |B       |0         |0    |                   |0                   |                     |                     |1      |          |NULL      |NULL      |          |                                                                                    |                |0        |0       |           |           |         |          |0    |NULL       |    |                                                                                                                                                                                                                                                                                                                                                                                                                                          |0             |30      |0                  |0                  |                  |0       |
+ROW   |23668 |0   |                 |                                                           |10081 |Free virtual memory, in %                                        |vm.vmemory.size[pavailable]                                                    |60   |7      |365   |0     |0         |             |%       |0         |0    |                   |0                   |                     |                     |1      |          |NULL      |NULL      |          |                                                                                    |                |0        |0       |           |           |         |          |0    |NULL       |    |                                                                                                                                                                                                                                                                                                                                                                                                                                          |0             |30      |0                  |0                  |                  |0       |
 ROW   |23149 |0   |                 |                                                           |10081 |System information                                               |system.uname                                                                   |3600 |7      |0     |0     |1         |             |        |0         |0    |                   |0                   |                     |                     |1      |          |NULL      |NULL      |          |                                                                                    |                |0        |0       |           |           |         |          |0    |NULL       |    |                                                                                                                                                                                                                                                                                                                                                                                                                                          |5             |30      |0                  |0                  |                  |0       |
 ROW   |23150 |0   |                 |                                                           |10081 |System uptime                                                    |system.uptime                                                                  |60   |7      |365   |0     |3         |             |uptime  |0         |0    |                   |0                   |                     |                     |1      |          |NULL      |NULL      |          |                                                                                    |                |0        |0       |           |           |         |          |0    |NULL       |    |                                                                                                                                                                                                                                                                                                                                                                                                                                          |0             |30      |0                  |0                  |                  |0       |
 ROW   |23158 |0   |                 |                                                           |10081 |Free memory                                                      |vm.memory.size[free]                                                           |60   |7      |365   |0     |3         |             |B       |0         |0    |                   |0                   |                     |                     |1      |          |NULL      |NULL      |          |                                                                                    |                |0        |0       |           |           |         |          |0    |NULL       |    |                                                                                                                                                                                                                                                                                                                                                                                                                                          |0             |30      |0                  |0                  |                  |0       |
@@ -1279,7 +1280,7 @@ ROW   |13423    |{12810}<20                    |Free disk space is less than 20%
 ROW   |13425    |{12812}>0                     |Host information was changed on {HOST.NAME}                                                            |   |0     |3       |                                                                                                                                      |NULL      |0   |0    |0            |                   |0               |               |0           |
 ROW   |13428    |{12815}<0                     |{HOST.NAME} has just been restarted                                                                    |   |0     |3       |                                                                                                                                      |NULL      |0   |0    |0            |                   |0               |               |0           |
 ROW   |13430    |{13095}>300                   |Too many processes on {HOST.NAME}                                                                      |   |0     |3       |                                                                                                                                      |NULL      |0   |0    |0            |                   |0               |               |0           |
-ROW   |13431    |{12818}<100000                |Lack of free swap space on {HOST.NAME}                                                                 |   |0     |3       |                                                                                                                                      |NULL      |0   |0    |0            |                   |0               |               |0           |
+ROW   |13431    |{12818}<10                    |Lack of available virtual memory on server {HOST.NAME}                                                 |   |0     |3       |                                                                                                                                      |NULL      |0   |0    |1            |{12818}>20         |0               |               |0           |
 ROW   |13433    |{12820}<10000                 |Lack of free memory on server {HOST.NAME}                                                              |   |0     |3       |                                                                                                                                      |NULL      |0   |0    |0            |                   |0               |               |0           |
 ROW   |13435    |{13094}>5                     |Processor load is too high on {HOST.NAME}                                                              |   |0     |3       |                                                                                                                                      |NULL      |0   |0    |0            |                   |0               |               |0           |
 ROW   |13439    |{12826}<20                    |Free disk space is less than 20% on volume {#FSNAME}                                                   |   |0     |2       |                                                                                                                                      |NULL      |0   |2    |0            |                   |0               |               |0           |
@@ -1593,7 +1594,7 @@ ROW   |12809     |23069 |13422    |last    |0        |
 ROW   |12810     |23072 |13423    |last    |0        |
 ROW   |12812     |23149 |13425    |diff    |0        |
 ROW   |12815     |23150 |13428    |change  |0        |
-ROW   |12818     |23147 |13431    |last    |0        |
+ROW   |12818     |23668 |13431    |min     |10m      |
 ROW   |12820     |23158 |13433    |last    |0        |
 ROW   |12824     |23160 |13437    |nodata  |5m       |
 ROW   |12826     |23165 |13439    |last    |0        |
@@ -3087,6 +3088,7 @@ ROW   |5886     |345          |23664 |
 ROW   |5887     |412          |25330 |
 ROW   |5888     |418          |25365 |
 ROW   |5889     |418          |23667 |
+ROW   |5890     |328          |23668 |
 
 TABLE |mappings
 FIELDS|mappingid|valuemapid|value|newvalue                              |
